Proyecto Fase 1/Fase I/k8s/m9.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodem9-service
  namespace: saf1
spec:
  type: ClusterIP
  selector:
    app: nodem9-deploy
  ports:
  - port: 80
    targetPort: 4003
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodem9-deploy
  namespace: saf1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodem9-deploy
  template:
    metadata:
      labels:
        app: nodem9-deploy
    spec:
      containers:
      - name: sa-m9
        imagePullPolicy: Always
        image: hugoses202002793/m9_saf2:latest
        ports:
        - containerPort: 4003
